--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -3,7 +3,11 @@
 {% block title %}Hello HomepageController!{% endblock %}
 
 {% block body %}
-    <div class="example-wrapper">
-        <a href="{{ path('easyadmin') }}"> Easy Admin </a>
-    </div>
+<style>
+    .example-wrapper { margin: 1em auto; font: 20px/1.5 sans-serif; text-align: left }
+</style>
+
+<div class="example-wrapper">
+    <a href="{{ path('easyadmin') }}"> Easy Admin </a>
+</div>
 {% endblock %}
