--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -4,12 +4,11 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    .example-wrapper { margin: 1em auto; font: 20px/1.5 sans-serif; text-align: left }
 </style>
 
 <div class="example-wrapper">
-    <a href="{{ path('admin') }}"> Admin </a>
+    <a href="{{ path('admin') }}"> Easy Admin </a>
 
 
 {#    {% if is_granted('ROLE_ADMIN') %}#}
